--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,11 @@
         <form action="/" method="post">
             <input type="submit" value="Exit">
         </form>
+        <form action="/paynow" method="post">
+            <input type = "submit" value = "Transfer Money">
+        </form>
+
+
     </div>    
 </body>
 
